--- a/InfoVis/content/css/custom.css
+++ b/InfoVis/content/css/custom.css
@@ -1,111 +1,153 @@
-
-body{
-	height: 100vh;
-	width: 100vw;
-}
-.link {
-	stroke: #aaa;
-}
-
-.node text {
-	stroke:#333;
-	cursor:pointer;
-}
-
-.node circle{
-	stroke:#fff;
-	stroke-width:3px;
-	fill:#555;
-}
-
-.btn{
-	margin-right: 8px;
-}
-
-/* The side navigation menu */
-.sidenav {
-    height: 100%; /* 100% Full-height */
-    width: 0; /* 0 width - change this with JavaScript */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Stay on top */
-    top: 0;
-    left: 0;
-    background-color: #111; /* Black*/
-    overflow-x: hidden; /* Disable horizontal scroll */
-    padding-top: 60px; /* Place content 60px from the top */
-    transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
-}
-
-/* The navigation menu links */
-.sidenav a {
-    padding: 8px 8px 8px 32px;
-    text-decoration: none;
-    font-size: 25px;
-    color: #818181;
-    display: block;
-    transition: 0.3s
-}
-
-/* When you mouse over the navigation links, change their color */
-.sidenav a:hover, .offcanvas a:focus{
-    color: #f1f1f1;
-}
-
-/* Position and style the close button (top right corner) */
-.sidenav .closebtn {
-    position: absolute;
-    top: 0;
-    right: 25px;
-    font-size: 36px;
-    margin-left: 50px;
-}
-
-.sidenav .sideNavTitle {
-    text-decoration: none;
-    font-size: 30px;
-    color: #818181;
-    position: absolute;
-    top: 20px;
-    left: 25px;
+html,body {
+    height: 100%;
+    margin: 0px;
+    background:#363333;
+    overflow: hidden;
+  font-family: "source-code-pro", monospace;
 
 }
-/* Style page content - use this if you want to push the page content to the right when you open the side navigation */
-#main {
-    transition: margin-left .5s;
-    padding: 20px;
-}
 
-/* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
-@media screen and (max-height: 450px) {
-    .sidenav {padding-top: 15px;}
-    .sidenav a {font-size: 18px;}
-}
-
-#main {
-    padding: 0px;
-}
-
-.nice-button{
-    font-size: 20px;
-    color: gray;
-    border-color: gray;
-    background-color: #111;
+.svgArea{
+    box-sizing: border-box;
+    border-style:solid;
     border-width: 1px;
-    border-style: solid;
-    border-radius: 6px;
-    margin-left: 25%;
-    margin-right: 1px;
-    margin-top: 1px;
-    transition: all 0.2s ease-out;
-    width: 70%;
+    border-color:#494949;
+}
+#svgStackedBars{
+    /*background:yellow;*/
+    float:left;
+}
+.yearsOption option {
+  font-family: "source-code-pro", monospace;
 }
 
-.nice-button:hover{
-    border-color: #77dc77;
-    color: #77dc77;
+#svgMap{
+    /*background:blue;*/
+    float:left;
 }
 
-.nice-button-active{
-    border-color: #77dc77;
-    color: #77dc77;
+#svgLines{
+    /*background:red;*/
+    float:left;
+
 }
+
+
+line.guide {
+  stroke: #e5e5e5;
+  stroke-dasharray: 2, 1;
+}
+
+line.guide-light {
+  stroke: #e5e5e5;
+  stroke-dasharray: 2, 1;
+}
+
+line.ruler {
+  stroke: #AAA;
+  stroke-dasharray: 1,1,3,1;
+}
+
+text.ruler-label {
+  fill: #AAA;
+  font-size: 12px;
+  stroke: none;
+  font-family: "source-code-pro", monospace;
+}
+#ticks {
+  position: relative;
+  margin-top: 25px;
+  width: 100%;
+  height: 30px;
+  border: 1px dotted #AAA;
+  border-bottom-width: 0;
+}
+
+.ticks {
+  position: absolute;
+  bottom: 0px;
+}
+
+
+
+.on{
+  display: block;
+}
+
+.voronoi {
+  fill: transparent;
+  stroke-width: 1px;
+  stroke: none;
+}
+
+
+
+.popover {
+  position: absolute;
+  pointer-events: none;
+  font-size: 12px;
+  z-index:101011101;
+  padding: 10px;
+  display: none;
+  background-color: white;
+  color: #111;
+  box-shadow: #333 1px 1px 7px;
+  border-radius: 2px;
+}
+
+
+.x.axis text{
+  fill: #AAA;
+  font-size: 12px;
+  stroke: none;
+  font-family: "source-code-pro", monospace;
+}
+
+.x.axis line{
+  stroke: #AAA;
+}
+
+.x.axis path{
+  stroke: #AAA;
+}
+
+.x2.axis line{
+  stroke: #e5e5e5;
+}
+
+.x2.axis path{
+  stroke: #AAA;
+}
+
+.y.axis text{
+  fill: #AAA;
+  font-size: 12px;
+  stroke: none;
+  font-family: "source-code-pro", monospace;
+}
+
+.y.axis line{
+  stroke: #e5e5e5;
+}
+
+.y.axis path{
+  stroke: #AAA;
+}
+.y-axis,.x-axis {
+  color : #AAA;
+}
+
+
+.tooltip {	
+  position: absolute;			
+  text-align: center;			
+  /* width: 30px;					 */
+  /* height: 12px;					 */
+  padding: 4px;				
+  font: 12px sans-serif;		
+  background: lightskyblue;	
+  border: 0px;		
+  border-radius: 8px;			
+  pointer-events: none;			
+}
+
