Add inicial implementation of heatmap

--- a/InfoVis/content/css/custom.css
+++ b/InfoVis/content/css/custom.css
@@ -68,7 +68,11 @@ text.ruler-label {
   bottom: 0px;
 }
 
-
+circle.earth {
+  fill: #1e5bc3;
+  stroke:white;
+  stroke-width: 0px;
+}
 
 .on{
   display: block;
@@ -137,7 +141,11 @@ text.ruler-label {
   color : #AAA;
 }
 
-
+.lines{
+  fill:none;
+  stroke: #ffab00;
+  stroke-width: 3;
+}
 .tooltip {	
   position: absolute;			
   text-align: center;			
@@ -151,3 +159,34 @@ text.ruler-label {
   pointer-events: none;			
 }
 
+
+
+
+.d3-tip,.d3-tip2 {
+  line-height: 1;
+  font-weight: bold;
+  padding: 12px;
+  background: rgba(0, 0, 0, 0.8);
+  color: #fff;
+  border-radius: 2px;
+}
+
+/* Creates a small triangle extender for the tooltip */
+.d3-tip:after {
+  box-sizing: border-box;
+  display: inline;
+  font-size: 10px;
+  width: 100%;
+  line-height: 1;
+  color: rgba(0, 0, 0, 0.8);
+  content: "\25BC";
+  position: absolute;
+  text-align: center;
+}
+
+/* Style northward tooltips differently */
+.d3-tip.n:after {
+  margin: -1px 0 0 0;
+  top: 100%;
+  left: 0;
+}
