Add tooltip to map and  fix stackBars tooltip income vals

--- a/InfoVis/content/css/custom.css
+++ b/InfoVis/content/css/custom.css
@@ -162,7 +162,7 @@ circle.earth {
 
 
 
-.d3-tip,.d3-tip2 {
+.d3-tip,.d3-tip2,.d3-tip3 {
   line-height: 1;
   font-weight: bold;
   padding: 12px;
@@ -190,6 +190,8 @@ circle.earth {
   top: 100%;
   left: 0;
 }
+
+
 
 /* geopath:hover {
   fill: rgba(8, 81, 156, 0.2);
